# ml_dashboard

./: Pipfile  README.md  config.yml  pyproject.toml
example/: config.yml  config_sample.yml  gen_groundtruth.py  gen_prediction.py  try.yaml
example/data/: groundtruth.csv  prediction.csv
hello/: bootstrap.py  dashboard.py  io.py  metadata.py
ml_dashboard/: dashboard.py  io.py  metadata.py
