[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ml_dashboard"
author = "Aditya Kelvianto Sidharta"
author-email = "aditya.sdrt@gmail.com"
home-page = "https://github.com/AdityaSidharta/ml-dashboard"
classifiers = ["License :: OSI Approved :: MIT License"]

